--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ defusedxml==0.7.1
 entrypoints==0.4
 executing==1.2.0
 fastjsonschema==2.16.2
+filelock==3.8.0
 finance-datareader==0.9.50
 flatbuffers==22.10.26
 fonttools==4.38.0
@@ -31,6 +32,7 @@ google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
 grpcio==1.50.0
 h5py==3.7.0
+huggingface-hub==0.11.0
 idna==3.4
 importlib-metadata==5.0.0
 ipykernel==6.17.1
@@ -97,7 +99,9 @@ pyparsing @ file:///opt/conda/conda-bld/pyparsing_1661452539315/work
 pyrsistent==0.19.2
 python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
 pytz==2022.6
+PyYAML==6.0
 pyzmq==24.0.1
+regex==2022.10.31
 requests==2.28.1
 requests-file==1.5.1
 requests-oauthlib==1.3.1
@@ -106,6 +110,7 @@ scikit-learn==1.1.3
 scipy==1.9.3
 seaborn @ file:///croot/seaborn_1666299130744/work
 Send2Trash==1.8.0
+sentencepiece==0.1.97
 six @ file:///tmp/build/80754af9/six_1644875935023/work
 sniffio==1.3.0
 soupsieve==2.3.2.post1
@@ -121,10 +126,12 @@ termcolor==2.1.0
 terminado==0.17.0
 threadpoolctl==3.1.0
 tinycss2==1.2.1
+tokenizers==0.13.2
 tomli==2.0.1
 tornado==6.2
 tqdm==4.64.1
 traitlets==5.5.0
+transformers==4.24.0
 typing_extensions==4.4.0
 urllib3==1.26.12
 wcwidth==0.2.5
